--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "mongodb": "^2.2.19",
-    "yelp-fusion": "^2.2.1"
+    "yelp-fusion": "^2.2.1",
+    "uuid": "^3.3.2",
+    "bcrypt": "^3.0.2"
   }
 }
