--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "mongodb": "^2.2.19",
-    "nodemon": "^1.18.7",
+    "nodemon": "^1.18.9",
     "uuid": "^3.3.2",
-    "yelp-fusion": "^2.2.1",
-    "xss": "^0.2.13"
+    "xss": "^0.2.13",
+    "yelp-fusion": "^2.2.1"
   },
   "devDependencies": {
     "db-seed": "^1.2.0"
